--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_redux: ^0.8.2
   redux_saga: ^3.0.2
   cupertino_icons: ^1.0.2
+  http: ^0.13.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
